--- a/test.json.dist
+++ b/test.json.dist
@@ -1,5 +1,9 @@
 {
   "projectId": "PROJECT_ID",
-  "region": "REGION"
-  "firebaseEmulatorConfigFilePath": "./example/firebase.json"
+  "region": "REGION",
+  "firebaseEmulatorConfigFilePath": "./example/firebase.json",  
+  "hub": {
+    "hostname": "localhost",
+    "port": "4400"
+  }
 }
