--- a/example/functions/package.json
+++ b/example/functions/package.json
@@ -24,6 +24,7 @@
     "eslint": "^7.32.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-node": "^11.1.0",
     "firebase-functions-test": "^0.2.3",
     "typescript": "^4.5.4"
   },
