--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,9 +5,9 @@ name: CI
 
 on:
   push:
-    branches: [github_workflow]
+    branches: [master]
   pull_request:
-    branches: [github_workflow]
+    branches: [master]
 
 jobs:
   build:
