--- a/example/functions/.eslintrc.json
+++ b/example/functions/.eslintrc.json
@@ -1,22 +1,26 @@
 {
-  "root": true,
   "env": {
     "browser": true,
-    "commonjs": true,
-    "es2017": true
+    "es2021": true
   },
-  "extends": ["standard"],
+  "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended"],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "ecmaVersion": 12
+    "ecmaVersion": "latest",
+    "sourceType": "module"
   },
   "plugins": ["@typescript-eslint"],
   "rules": {
-    "brace-style": "off",
-    "max-len": "off",
-    "space-before-function-paren": ["error", "never"],
+    "indent": ["error", 4],
+    "linebreak-style": ["error", "unix"],
+    "quotes": ["error", "single"],
     "semi": ["error", "always"],
     "semi-spacing": ["error", { "before": false, "after": true }],
-    "semi-style": ["error", "last"]
+    "semi-style": ["error", "last"],
+    "brace-style": "off",
+    "no-unused-expressions": "off",
+    "chai-friendly/no-unused-expressions": "error",
+    "max-len": "off",
+    "space-before-function-paren": ["error", { "anonymous": "always", "named": "never", "asyncArrow": "always" }]
   }
 }
