--- a/example/functions/package.json
+++ b/example/functions/package.json
@@ -15,17 +15,17 @@
   },
   "main": "lib/index.js",
   "dependencies": {
-    "firebase-admin": "^9.12.0",
+    "firebase-admin": "^10.0.2",
     "firebase-functions": "^3.16.0"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
-    "eslint": "^7.32.0",
-    "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.25.3",
-    "firebase-functions-test": "^0.2.3",
-    "typescript": "^4.5.4"
+    "@types/node": "^16.11.7",
+    "@typescript-eslint/eslint-plugin": "^5.10.0",
+    "@typescript-eslint/parser": "^5.10.0",
+    "eslint": "^8.7.0",
+    "eslint-plugin-import": "^2.25.4",
+    "firebase-functions-test": "^0.3.3",
+    "typescript": "^4.5.5"
   },
   "private": true
 }
