--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -21,16 +21,21 @@ on:
 jobs:
   build:
     runs-on: ubuntu-20.04
+    strategy:
+      matrix:
+        node-version: [16.x]
+        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
         with:
-          node-version: 16
+          node-version: ${{ matrix.node-version }}
           cache: "npm"
       - run: npm i -g firebase-tools
       - run: npm ci
       - run: npm run build
-      - run: echo '{"projectId":"gp-example","region":"europe-west1","firebaseEmulatorConfigFilePath":"./example/firebase.json","hub":{"hostname":"localhost","port":18099}}' > test.json
+      - run: echo '{"projectId":"gp-example","region":"europe-west1","storageBucket":"default-bucket","firebaseEmulatorConfigFilePath":"./example/firebase.json","hub":{"hostname":"localhost","port":4400}}' > test.json
       - run: (cd example/functions; npm ci && npm run lint && npm run build)
       - run: (cd example; echo '{"projects":{"default":"gp-example"}}' > .firebaserc)
       - run: (cd example; firebase emulators:exec '(cd ..; npm test)')
