--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
   "dependencies": {
     "axios": "^0.27.2",
     "firebase": "^9.8.4",
-    "firebase-admin": "^11.0.0"
+    "firebase-admin": "^10.3.0"
   },
   "devDependencies": {
+    "@types/chai": "^4.3.1",
+    "@types/mocha": "^9.1.1",
     "@types/node": "^16.11.17",
     "@typescript-eslint/eslint-plugin": "^5.30.0",
     "@typescript-eslint/parser": "^5.30.0",
