--- a/example/functions/package.json
+++ b/example/functions/package.json
@@ -1,5 +1,6 @@
 {
   "name": "functions",
+  "version": "1.0.0",
   "scripts": {
     "lint": "eslint 'src/**/*.ts' --fix",
     "lint:nofix": "eslint 'src/**/*.ts'",
@@ -11,20 +12,20 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "16"
+    "node": "18"
   },
   "main": "lib/index.js",
   "dependencies": {
-    "firebase-admin": "^10.0.2",
-    "firebase-functions": "^3.16.0"
+    "firebase-admin": "^11.3.0",
+    "firebase-functions": "^4.1.1"
   },
   "devDependencies": {
-    "@types/node": "^16.11.7",
-    "@typescript-eslint/eslint-plugin": "^5.10.0",
-    "@typescript-eslint/parser": "^5.10.0",
-    "eslint": "^8.7.0",
+    "@types/node": "^18.11.15",
+    "@typescript-eslint/eslint-plugin": "^5.46.1",
+    "@typescript-eslint/parser": "^5.46.1",
+    "eslint": "^8.29.0",
     "eslint-plugin-import": "^2.25.4",
-    "typescript": "^4.5.5"
+    "typescript": "^4.9.4"
   },
   "private": true
 }
