--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gp-firebase-emulator-unit-test",
   "description": "A unit test lib to use with the firebase emulator",
-  "version": "0.2.0",
+  "version": "1.0.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
@@ -14,7 +14,7 @@
     "test": "mocha --require ts-node/register ./test/*.spec.ts --timeout 60000"
   },
   "engines": {
-    "node": ">=16.0.0 <17.0.0"
+    "node": "18"
   },
   "repository": {
     "type": "git",
@@ -34,22 +34,22 @@
   },
   "homepage": "https://github.com/gpfister/gp-firebase-emulator-unit-test#readme",
   "dependencies": {
-    "axios": "^0.27.2",
+    "axios": "^1.2.1",
     "firebase": "^9.8.4",
-    "firebase-admin": "^10.3.0"
+    "firebase-admin": "^11.3.0"
   },
   "devDependencies": {
     "@types/chai": "^4.3.1",
-    "@types/mocha": "^9.1.1",
-    "@types/node": "^16.11.17",
+    "@types/mocha": "^10.0.1",
+    "@types/node": "^18.11.15",
     "@typescript-eslint/eslint-plugin": "^5.30.0",
     "@typescript-eslint/parser": "^5.30.0",
     "chai": "^4.3.6",
     "eslint": "^8.18.0",
     "eslint-plugin-chai-friendly": "^0.7.2",
-    "mocha": "^10.0.0",
+    "mocha": "^10.2.0",
     "ts-node": "^10.8.1",
-    "tsc-watch": "^5.0.3",
+    "tsc-watch": "^6.0.0",
     "typedoc": "^0.23.2",
     "typedoc-plugin-markdown": "^3.13.1",
     "typescript": "^4.7.4"
