--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,19 +1,29 @@
-FROM gpfister/firebase-devenv:1.0.0
+#
+# gp-firebase-emulator-unit-test
+# Copyright (c) 2021-2023, Greg PFISTER. MIT License
+#
+# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS
+# FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR
+# COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER
+# IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
+# CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+#
+
+FROM ghcr.io/gp-devenv/gp-node-devenv:22.04-18-1
 
 # Switch back to root
 USER root
 
-# Setup Mosquitto
-COPY ./mosquitto.conf /etc/mosquitto/mosquitto.conf
+# Set firebase-cli
+COPY ./firebase-cli /usr/bin
+RUN chmod ogu+x /usr/bin/firebase-cli
+
+# Install Java
 RUN apt-get update && \
-    apt-get install -y -o DPkg::Options::=--force-confdef software-properties-common \
-                                                          mosquitto && \
-    apt-get autoremove -y && \
-    apt-get autoclean && \
-    if [ ! -d /var/lib/mosquitto ]; then mkdir -p /var/lib/mosquitto; fi && \
-    if [ ! -d /var/log/mosquitto ]; then mkdir -p /var/log/mosquitto; fi && \
-    chown -R vscode: /var/lib/mosquitto && \
-    chown -R vscode: /var/log/mosquitto
+    apt-get install -y -o DPkg::Options::=--force-confdef openjdk-19-jre-headless imagemagick && \
+    apt-get autoclean -y && \
+    apt-get autoremove -y
 
 # Switch back to vscode user
 USER vscode
@@ -25,12 +35,15 @@ WORKDIR /workspace
 RUN git config --global --add safe.directory /workspace
 
 # Expose ports
-EXPOSE 1883
+EXPOSE 80
 EXPOSE 17000
 EXPOSE 17001
 EXPOSE 17002
 EXPOSE 17003
+EXPOSE 17004
 EXPOSE 17005
 EXPOSE 17006
 
-CMD ["mosquitto", "-c", "/etc/mosquitto/mosquitto.conf"]
+ENTRYPOINT ["sudo", "/entrypoint.sh"]
+
+# End
