--- a/.devcontainer/docker-compose.yaml
+++ b/.devcontainer/docker-compose.yaml
@@ -1,7 +1,13 @@
 #
-# @author Greg PFISTER <greg@oskey.io>
-# @copyright (c) 2022 OSkey.io. All rights reserved.
-# @license SEE LICENSE IN LICENSE.md
+# gp-firebase-emulator-unit-test
+# Copyright (c) 2021-2023, Greg PFISTER. MIT License
+#
+# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS
+# FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR
+# COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER
+# IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
+# CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 #
 
 version: '3.9'
@@ -13,29 +19,18 @@ services:
     build:
       dockerfile: Dockerfile
       context: .
-    ports:
-      - '17000:17000'
-      - '17001:17001'
-      - '17002:17002'
-      - '17003:17003'
-      - '17005:17005'
-      - '17006:17006'
+    # ports:
+    #   - '17000:17000'
+    #   - '17001:17001'
+    #   - '17002:17002'
+    #   - '17003:17003'
+    #   - '17005:17005'
+    #   - '17006:17006'
     volumes:
       - ..:/workspace
       - gp-firebase-emulator-unit-test-home:/home
     networks:
       - gp-firebase-emulator-unit-test
-  #   depends_on:
-  #     - mosquitto
-  # mosquitto:
-  #   image: eclipse-mosquitto:2
-  #   container_name: mosquitto-oskey-dev
-  #   volumes:
-  #     - ./mosquitto/config:/mosquitto/config
-  #     - oskey-dev-mosquitto-data:/mosquitto/data
-  #     - oskey-dev-mosquitto-log:/mosquitto/log
-  #   networks:
-  #     - oskey-dev
 
 volumes:
   gp-firebase-emulator-unit-test-home:
