--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -15,44 +15,44 @@
 name: CD
 
 on:
-  release:
-    types: [created]
+    release:
+        types: [created]
 
 jobs:
-  build:
-    runs-on: ubuntu-22.04
-    strategy:
-      matrix:
-        node-version: [18.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-    steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v2
-        with:
-          node-version: ${{ matrix.node-version }}
-          cache: 'npm'
-      - run: npm i -g firebase-tools
-      - run: npm ci
-      - run: npm run build
-      - run: (cd example; firebase use local --token $FIREBASE_TOKEN)
-        env:
-          FIREBASE_TOKEN: ${{secrets.firebase_token}}
-      - run: (cd example/functions; npm ci && npm run lint && npm run build)
-      - run: (cd example; npm run test:ci)
+    build:
+        runs-on: ubuntu-22.04
+        strategy:
+            matrix:
+                node-version: [18.x]
+                # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+        steps:
+            - uses: actions/checkout@v2
+            - name: Use Node.js ${{ matrix.node-version }}
+              uses: actions/setup-node@v2
+              with:
+                  node-version: ${{ matrix.node-version }}
+                  cache: 'npm'
+            - run: sudo cp .devcontainer/firebase-cli /usr/bin
+            - run: npm ci
+            - run: npm run build
+            - run: (cd example; npm ci && firebase-cli use local)
+              env:
+                  FIREBASE_TOKEN: ${{secrets.firebase_token}}
+            - run: (cd example/functions; npm ci && npm run lint && npm run build)
+            - run: (cd example; npm run test:ci)
 
-  publish-npm:
-    needs: build
-    runs-on: ubuntu-22.04
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
-        with:
-          node-version: 16
-          registry-url: https://registry.npmjs.org/
-      - run: npm ci
-      - run: npm run lint
-      - run: npm run build
-      - run: npm publish
-        env:
-          NODE_AUTH_TOKEN: ${{secrets.npm_token}}
+    publish-npm:
+        needs: build
+        runs-on: ubuntu-22.04
+        steps:
+            - uses: actions/checkout@v2
+            - uses: actions/setup-node@v2
+              with:
+                  node-version: 16
+                  registry-url: https://registry.npmjs.org/
+            - run: npm ci
+            - run: npm run lint
+            - run: npm run build
+            - run: npm publish
+              env:
+                  NODE_AUTH_TOKEN: ${{secrets.npm_token}}
