--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gp-firebase-emulator-unit-test",
   "description": "A unit test lib to use with the firebase emulator",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
@@ -34,24 +34,24 @@
   },
   "homepage": "https://github.com/gpfister/gp-firebase-emulator-unit-test#readme",
   "dependencies": {
-    "axios": "^1.4.0",
-    "firebase": "^10.1.0",
-    "firebase-admin": "^11.10.1"
+    "axios": "^1.7.7",
+    "firebase": "^10.14.0"
   },
   "devDependencies": {
-    "@types/chai": "^4.3.5",
-    "@types/mocha": "^10.0.1",
-    "@types/node": "^20.5.0",
-    "@typescript-eslint/eslint-plugin": "^6.4.0",
-    "@typescript-eslint/parser": "^6.4.0",
-    "chai": "^4.3.7",
-    "eslint": "^8.47.0",
-    "eslint-plugin-chai-friendly": "^0.7.2",
-    "mocha": "^10.2.0",
-    "ts-node": "^10.9.1",
-    "tsc-watch": "^6.0.4",
-    "typedoc": "^0.24.8",
-    "typedoc-plugin-markdown": "^3.15.4",
-    "typescript": "^5.1.6"
+    "@types/chai": "^4.3.20",
+    "@types/mocha": "^10.0.8",
+    "@types/node": "^20.16.10",
+    "@typescript-eslint/eslint-plugin": "^8.8.0",
+    "@typescript-eslint/parser": "^8.8.0",
+    "chai": "^4.5.0",
+    "eslint": "^8.57.1",
+    "eslint-plugin-chai-friendly": "^1.0.1",
+    "firebase-admin": "^12.6.0",
+    "mocha": "^10.7.3",
+    "ts-node": "^10.9.2",
+    "tsc-watch": "^6.2.0",
+    "typedoc": "^0.26.8",
+    "typedoc-plugin-markdown": "^4.2.9",
+    "typescript": "^5.6.2"
   }
 }
